load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "login_lib",
    srcs = ["main.go"],
    importpath = "github.com/uhthomas/tesla/cmd/login",
    visibility = ["//visibility:private"],
    deps = ["@org_golang_x_oauth2//:oauth2"],
)

go_binary(
    name = "login",
    embed = [":login_lib"],
    visibility = ["//visibility:public"],
)
